If System name is dev enable G1GC