@@ -3,6 +3,8 @@ package com.yahoo.vespa.model.container.search;
 
 import com.yahoo.config.provision.Environment;
 import com.yahoo.config.provision.RegionName;
+import com.yahoo.config.provision.SystemName;
+import com.yahoo.config.provision.Zone;
 import com.yahoo.container.bundle.BundleInstantiationSpecification;
 import com.yahoo.osgi.provider.model.ComponentModel;
 import com.yahoo.prelude.fastsearch.FS4ResourcePool;
@@ -117,6 +119,20 @@ public class ContainerSearch extends ContainerSubsystem<SearchChains>
         if (pageTemplates!=null) pageTemplates.getConfig(builder);
     }
 
+    private String buildGCOpts(Zone zone) {
+        Optional<String> gcopts = owningCluster.getGCOpts();
+        if (gcopts.isPresent()) {
+            return gcopts.get();
+        } else if (zone.system() == SystemName.dev) {
+            return ContainerCluster.G1GC;
+        } else if (owningCluster.isHostedVespa()) {
+            return ((zone.environment() != Environment.prod) || RegionName.from("us-east-3").equals(zone.region()))
+                    ? ContainerCluster.G1GC : ContainerCluster.CMS;
+        } else {
+            return ContainerCluster.CMS;
+        }
+    }
+
     @Override
     public void getConfig(QrStartConfig.Builder qsB) {
     	QrStartConfig.Jvm.Builder internalBuilder = new QrStartConfig.Jvm.Builder();
@@ -126,18 +142,7 @@ public class ContainerSearch extends ContainerSubsystem<SearchChains>
             internalBuilder.heapSizeAsPercentageOfPhysicalMemory(owningCluster.getHostClusterId().isPresent() ? 17 : 60);
         }
         qsB.jvm(internalBuilder.directMemorySizeCache(totalCacheSizeMb()));
-        Optional<String> gcopts = owningCluster.getGCOpts();
-        if (gcopts.isPresent()) {
-            qsB.jvm.gcopts(gcopts.get());
-        } else if (owningCluster.isHostedVespa()) {
-            if ((owningCluster.getZone().environment() != Environment.prod) || RegionName.from("us-east-3").equals(owningCluster.getZone().region())) {
-                qsB.jvm.gcopts("-XX:-UseConcMarkSweepGC -XX:+UseG1GC -XX:MaxTenuringThreshold=15");
-            } else {
-                qsB.jvm.gcopts("-XX:+UseConcMarkSweepGC -XX:MaxTenuringThreshold=15 -XX:NewRatio=1");
-            }
-        } else {
-            qsB.jvm.gcopts("-XX:+UseConcMarkSweepGC -XX:MaxTenuringThreshold=15 -XX:NewRatio=1");
-        }
+        qsB.jvm.gcopts(buildGCOpts(owningCluster.getZone()));
     }
 
     private int totalCacheSizeMb() {
@@ -208,6 +213,6 @@ public class ContainerSearch extends ContainerSubsystem<SearchChains>
      * Struct that encapsulates qrserver options.
      */
     public static class Options {
-        public Map<String, QrsCache> cacheSettings = new LinkedHashMap<>();
+        Map<String, QrsCache> cacheSettings = new LinkedHashMap<>();
     }
 }
